--- a/turnos.html
+++ b/turnos.html
@@ -11,12 +11,14 @@
     <h1>Turnero</h1>
 
     <div>
-        <form action=""></form>
+        <form action="*" method="post">
 
             <input type="text" id="nombre" placeholder="Ingrese su Nombre y Apellido">
             <input type="text" id="dia" placeholder="Ingrese el día que desea venir">
             <input type="text" id="hora" placeholder="Ingrese la hora en la que desea venir">
+            <button id="btn">Enviar</button>
 
+        </form>
     </div>
     <div id="guardado">
         <h2>Su turno será guardado para el día:</h2>
