--- a/turnos.html
+++ b/turnos.html
@@ -15,7 +15,7 @@
 
             <input type="text" id="nombre" placeholder="Ingrese su Nombre y Apellido">
             <input type="text" id="dia" placeholder="Ingrese el día que desea venir">
-            <input type="text" id="hora" placeholder="Ingrese la hora en la que desea venir">
+            <input type="number" id="hora" placeholder="Ingrese la hora en la que desea venir">
             <button id="btn">Enviar</button>
 
         </form>
