--- a/turnos.html
+++ b/turnos.html
@@ -10,8 +10,8 @@
 
     <h1>Turnero</h1>
 
-    <div>
-        <form action="*" method="post">
+    <div >
+        <form action="*" method="post" id="formulario">
 
             <input type="text" id="nombre" placeholder="Ingrese su Nombre y Apellido">
             <input type="text" id="dia" placeholder="Ingrese el día que desea venir">
@@ -24,6 +24,8 @@
         <h2>Su turno será guardado para el día:</h2>
     </div>
 
+
+    <script src="js/jquery.js"></script>
     <script src="./js/turnos.js"></script>
 
 </body>
