--- a/turnos.html
+++ b/turnos.html
@@ -45,7 +45,9 @@
     <div id="guardado">
         <h2>Su turno será guardado para el día:</h2>
     </div>
-
+    <div id="calendario">
+        <ul id="feriados"></ul>
+    </div>
 
     <script src="js/jquery.js"></script>
     <script src="./js/turnos.js"></script>
