--- a/turnos.html
+++ b/turnos.html
@@ -44,6 +44,7 @@
     </div>
     <div id="guardado">
         <h2>Su turno será guardado para el día:</h2>
+        <ul id="fechas"></ul>
     </div>
     <div id="calendario">
         <ul id="feriados"></ul>
