--- a/index.html
+++ b/index.html
@@ -31,41 +31,42 @@
     </nav>
 
 <!-- End Nav -->
+    <div class="backgroundImg">
+        <h1>Lic. Gabriela Ferreyra</h1>
 
-<h1>Lic. Gabriela Ferreyra</h1>
+        <!-- comienza carousel -->
 
-<!-- comienza carousel -->
-
-    <div id="carouselExampleControls" class="carousel slide w-100 mx-auto" data-bs-ride="carousel">
-        <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="img/terapia.jpg" class="d-flex mx-auto img-fluid" alt="terapia">
-        </div>
-        <div class="carousel-item">
-            <img src="img/terapia.jpg" class="d-flex mx-auto img-fluid" alt="terapia">
-        </div>
-        <div class="carousel-item">
-            <img src="img/terapia.jpg" class="d-flex mx-auto img-fluid" alt=terapia">
-        </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-        </button>
+            <div id="carouselExampleControls" class="carousel slide w-50 mx-auto" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/terapia.jpg" class="d-flex mx-auto img-fluid" alt="terapia">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/terapiaDos.jpg" class="d-flex mx-auto img-fluid" alt="terapia">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/terapiaTres.jpg" class="d-flex mx-auto img-fluid" alt=terapia">
+                </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+                </button>
+            </div>
     </div>
-
 <!-- termina carousel -->
 <!-- comienza footer -->
-    <footer>
-
+    <footer class="text-center py-4 textFooter bg-dark">
+        <div class="container">
+            <p class="textFooter">Todos los derechos reservados. Benjamin Paz©</p>
+        </div>
     </footer>
 <!-- termina footer -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
 </body>
 </html>
