--- a/turnos.html
+++ b/turnos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaby Ferreyra</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Nav start -->
@@ -27,31 +27,42 @@
         </div>
         </div>
     </nav>
-
     <!-- End Nav -->
+    <div class="backgroundImg">
 
-    <h1>Lic. Gabriela Ferreyra</h1>
 
-    <div >
-        <form action="*" method="post" id="formulario">
+        <h1>Lic. Gabriela Ferreyra</h1>
 
-            <input type="text" id="nombre" placeholder="Ingrese su Nombre y Apellido">
-            <input type="text" id="dia" placeholder="Ingrese el día que desea venir">
-            <input type="number" id="hora" placeholder="Ingrese la hora en la que desea venir">
-            <button id="btn">Enviar</button>
+        <div >
+            <form action="*" method="post" id="formulario">
 
-        </form>
+                <input type="text" id="nombre" placeholder="Ingrese su Nombre y Apellido">
+                <input type="text" id="dia" placeholder="Ingrese el día que desea venir">
+                <input type="number" id="hora" placeholder="Ingrese la hora en la que desea venir">
+                <button id="btn">Enviar</button>
+
+            </form>
+        </div>
+        <div id="guardado">
+            <h2>Su turno será guardado para el día:</h2>
+            <ul id="fechas"></ul>
+        </div>
+        <div id="logIn">
+            
+        </div>
+        <div id="calendario">
+            <ul id="feriados"></ul>
+        </div>
     </div>
-    <div id="guardado">
-        <h2>Su turno será guardado para el día:</h2>
-        <ul id="fechas"></ul>
-    </div>
-    <div id="calendario">
-        <ul id="feriados"></ul>
-    </div>
-
+    <!-- comienza footer -->
+    <footer class="text-center py-4 textFooter bg-dark">
+        <div class="container">
+            <p class="textFooter">Todos los derechos reservados. Benjamin Paz©</p>
+        </div>
+    </footer>
+    <!-- termina footer -->
     <script src="js/jquery.js"></script>
-    <script src="./js/turnos.js"></script>
+    <script src="js/turnos.js"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
