--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaby Ferreyra</title>
-    <link rel="stylesheet" href="css/style.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
 <!-- Nav start -->
@@ -31,7 +31,8 @@
     </nav>
 
 <!-- End Nav -->
-    <div class="backgroundImg">
+
+    <div class="backgroundImg content">
         <h1>Lic. Gabriela Ferreyra</h1>
 
         <!-- comienza carousel -->
@@ -39,13 +40,13 @@
             <div id="carouselExampleControls" class="carousel slide w-50 mx-auto" data-bs-ride="carousel">
                 <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/terapia.jpg" class="d-flex mx-auto img-fluid" alt="terapia">
+                    <img src="img/terapia.png" class="d-flex mx-auto img-fluid" alt="terapia">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/terapiaDos.jpg" class="d-flex mx-auto img-fluid" alt="terapia">
+                    <img src="img/terapiaDos.png" class="d-flex mx-auto img-fluid" alt="terapia">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/terapiaTres.jpg" class="d-flex mx-auto img-fluid" alt=terapia">
+                    <img src="img/terapiaTres.png" class="d-flex mx-auto img-fluid" alt=terapia">
                 </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
